# src/routes/authRoutes.ts
@@ -1,9 +1,10 @@
-import { Router } from 'express';
-import { loginAdmin, resetPassword } from '../controllers/authController';
+import express from 'express';
+import { loginAdmin, registerAdmin, resetPassword } from '../controllers/authController';
 
-const router = Router();
+const router = express.Router();
 
 router.post('/login', loginAdmin);
+router.post('/register', registerAdmin);
 router.post('/reset-password', resetPassword);
 
 export default router;
